--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
   "dependencies": {
     "express": "^4.19.2",
     "index.js": "0.0.3",
-    "touch": "^3.1.0"
+    "touch": "^3.1.0",
+    "@sendgrid/mail": "^8.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.2.1",
+    "nodemailer": "^6.9.12",
+    "nodemon": "^3.1.0"
   }
 }
